# PhotonScript

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: example.env
deploy/: deploy.ps1  integrate_sho.js  prepare-integration.ps1  run-integration.ps1  run-photonscript.ps1
docs/: HANDBOOK.md  HARDWARE.md
photonscript/: __init__.py  cli.py  orchestrator.py
photonscript/image_processor/: agent.py
photonscript/librarian/: agent.py
photonscript/scheduler/: app.py  armer.py  astrobin_client.py  calibration.py  campaign.py  daily_report.py  focus_seeds.json  focus_seeds.py  forecast.py  identify.py  moon.py  mosaic.py  night_plan.py  nina_sequence.py  nina_sequence_json.py  preflight.py  project_store.py  runs.py  sequence_lint.py  target_planner.py
photonscript/scheduler/static/css/: style.css
photonscript/scheduler/templates/: calibration.html  dashboard.html  mosaic.html  runs.html  system.html
photonscript/shared/: astronomy.py  config.py  database.py  envfile.py  localtime.py  messagebus.py  models.py  pushover.py  version.py
photonscript/telescope_agent/: agent.py  image_validator.py  nina_client.py  phd2_client.py
tests/: test_resilience.py  test_shared_envfile.py  test_shared_models.py
tests/test_image_processor/: test_processor.py
tests/test_librarian/: test_transfer_window.py
tests/test_scheduler/: test_astrobin_mix.py  test_bias_gate.py  test_forecast.py  test_moon_planner.py  test_nina_sequence.py  test_nina_sequence_json.py  test_project_store.py  test_runs.py  test_sequence_lint.py  test_target_planner.py  test_temp_qa.py
tests/test_telescope_agent/: test_cooling_watchdog.py  test_image_validator.py
(+1 files in other folders)
