[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photonscript"
version = "0.1.0"
description = "World-class remote telescope orchestration platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "PhotonScript Team"},
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.3",
    "httpx>=0.27.0",
    "astropy>=6.0",
    "astroplan>=0.9",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "websockets>=12.0",
    "paramiko>=3.4",
    "watchdog>=4.0",
    "pillow>=10.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "apscheduler>=3.10",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2",
    "rich>=13.7",
    "typer>=0.9",
]

[project.optional-dependencies]
# Star extraction for full QA metrics (eccentricity, collimation watch).
# sep needs a C compiler on Windows if no wheel exists for your Python;
# sep-pjw ships prebuilt wheels. The validator falls back to scipy if neither
# is installed (star counts + FWHM still work; eccentricity is lost).
stars = ["sep>=1.4"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3.0",
    "mypy>=1.8",
]
processing = [
    "scikit-image>=0.22",
]

[project.scripts]
photonscript = "photonscript.cli:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
